moved over changes made to old repo, fixed login, need to fix broken text boxes on socials, cant open profile settings, fix prof links
